--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,10 @@ services:
       - "5432:5432"
 
   rabbitmq:
-    image: rabbitmq:management
+    image: rabbitmq:3.9-management
     ports:
       - "5672:5672"
       - "15672:15672"
-    env_file:
-      - .env
+    volumes:
+      - ./.rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
+      - ./.rabbitmq/definitions.json:/etc/rabbitmq/definitions.json:ro
